# Team06_ADS_Autonomous-Lane-Detection

./: CMakeLists.txt  Car.py  DataSet.py  JetCar.py  JetSonDataSet.py  PyTorch.md  README.md  auto_tool.py  camteste.py  car_2.py  car_3.py  conf_mcp2515_500kbps.py  create_dataset.py  debug_subscriber.cpp  editor.py  enable-spi-pins-custom.dtb  enable-spi-pins-custom.dts  erros.txt  export_onnx.py  extract_best.py  fix_seg.py  inference.py  label.py  lane_mask_test  linenet.py  main.cpp  makefile  model.onnx  model_fp16.engine  pywidgets.md  receive_can.py  run.sh  simple_test_can_send.py  simple_test_speed.py  split.py  tegra210-nano-can.dts  test1.py  test_image.py  test_loopback.py  test_mcp2515_loopback.py  (+25 more)
.github/workflows/: ci.yml
Ardoino/: speed_sensor.ino
AutoTuningPID/: CANMessageProcessor.hpp  CMakeLists.txt  CanBusManager.cpp  CanBusManager.hpp  MCP2515Controller.cpp  MCP2515Controller.hpp  SPIController.cpp  SpeedPIDTuner.cpp  SpeedPIDTuner.hpp  main.cpp
AutoTuningPID copy/: CanBusManager.hpp  MCP2515Configurator.cpp  MCP2515Constants.hpp  MCP2515Controller.cpp  SPIController.hpp  main.cpp
Comunication_zmq/: ZmqPublisher.cpp  ZmqPublisher.hpp  main.cpp
Controllers/src/: ControlAssembly.cpp  old_ControlAssembly.cpp
Controls/: CMakeLists.txt  README.md  main.cpp
Controls/control_systems/Cam/: cam.hpp
Controls/control_systems/LanesGeometry/: infer.hpp  lane.hpp  mask.cpp
Controls/control_systems/MPC/: README.md  nmpc.hpp
Controls/control_systems/PID/: README.md  pid.hpp
Controls/control_systems/ZMQ/: ZmqSubscriber.hpp
Controls/object_detection/: TensorRTYOLO.cpp  fps.cpp  fps.hpp  frame.cpp  frame.hpp
Define_PID/: SpeedPIDController.cpp  SpeedPIDController.hpp  SpeedPIDTuner.cpp  SpeedPIDTuner.hpp  main.cpp  pid_tuner
Line/: Controller.py  Follow.py  Hybrid.py  SmartCenter.py  TrackController.py
MCP2515/: CANMessageProcessor.cpp  CANMessageProcessor.hpp  CMakeLists.txt  CanBusManager.cpp  IMCP2515Controller.hpp  ISPIController.hpp  MCP2515Configurator.hpp  MCP2515Controller.hpp
MCP2515_tem01/arduino/: SpeedSensor.cpp  SpeedSensor.h  joining.ino
MCP2515_tem01/jetson_lib/: CanBusManager.cpp  CanBusManager.hpp  IMCP2515Controller.hpp  ISPIController.hpp  MCP2515Configurator.cpp  MCP2515Configurator.hpp  MCP2515Controller.cpp  MCP2515Controller.hpp  SPIController.cpp  SPIController.hpp
MPC/: README.md  dynamic_model  mpc_carla.py  mpc_carla_small_v01.py  mpc_carla_v2.py  mpc_integrated  mpc_integrated.cpp  mpc_integrated_v1.cpp  mpc_integrated_v2  mpc_integrated_v2.cpp  proc_mask  process_mask  process_mask.cpp  process_mask.py  test_opencv.py  zmq_subscriber_test
MPC/BackMotors/: BackMotors.cpp  BackMotors.hpp
MPC/Control/: ControlAssembly.hpp
MPC/FServo/: FServo.hpp
MPC/cpp/: dynamic_model.cpp  mpc  mpc.cpp  mpc_carla.cpp  mpc_integrated_v1.cpp  mpc_integrated_v2  mpc_integrated_v2.cpp  process_mask.cpp
MPC/cpp_infer/: infer_test  infer_test.cpp  lane_detec  lane_detec_360  lane_detec_v1  lane_detec_v1.cpp  lane_detection  lane_detection.cpp
MPC/cpp_infer_v2/: main  main.cpp
MPC/cpp_lane_infer/: lane_detection.cpp  lane_detection.hpp  main.cpp
MPC/cpp_lane_infer_v10_acele/: lane.cpp  lane.hpp  main.cpp  mask.cpp  mask.hpp  nmpc.cpp  nmpc.hpp  pid.hpp  teste01.txt  teste02.txt
MPC/cpp_lane_infer_v11_PID/: CMakeLists.txt  lane.cpp  lane.hpp  main.cpp  nmpc.cpp  nmpc.hpp  teste01.txt  teste02.txt
MPC/cpp_lane_infer_v12_ZMQ/: CMakeLists.txt  SpeedFilter.hpp  ZmqPublisher.cpp  autotune.cpp  autotune.hpp  cam.cpp  infer.cpp  lane.cpp  lane.hpp  main.cpp  main_v1.cpp  mask.cpp  model.engine  nmpc.cpp  nmpc.hpp  pid.cpp  pid.hpp  utils.cpp  utils.hpp
MPC/cpp_lane_infer_v12_ZMQ/aux/: trapezoidal.hpp
MPC/cpp_lane_infer_v2/: lane_detection.cpp  lane_detection.hpp  main.cpp
MPC/cpp_lane_infer_v3/: CMakeLists.txt  lane_detection.cpp  lane_detection.hpp  main.cpp
MPC/cpp_lane_infer_v4_lane_nmpc/: CMakeLists.txt  lane_data.txt  lane_detection.cpp  main.cpp  nmpc.cpp
MPC/cpp_lane_infer_v5_lane_nmpc/: CMakeLists.txt  lane_detection.cpp  lane_detection.hpp  main.cpp  mask_processor.cpp  nmpc_controller.cpp  test_casadi  test_casadi.cpp
MPC/cpp_lane_infer_v6_nmpc/: CMakeLists.txt  lane_detection.cpp  lane_detection.hpp  main.cpp  mask_processor.cpp  mask_processor.hpp  nmpc_controller.cpp  polyfit.cpp  polyfit.hpp
MPC/cpp_lane_infer_v7_polyfit/: main.cpp  mask_processor.hpp  model_360.engine  nmpc_controller.cpp  nmpc_controller.hpp
MPC/cpp_lane_infer_v8/: CMakeLists.txt  lane.cpp  lane.hpp  main.cpp  (+8 more)
MPC/cpp_mask_nmpc/: CMakeLists.txt  lane_processor.cpp  lane_processor_v1.hpp  main.cpp  main_v1.cpp  nmpc_controller.hpp  nmpc_controller_v1.cpp  vehicle_interface.cpp  vehicle_interface.hpp
MPC/process_cam/: CMakeLists.txt  csi_camera.cpp  csi_camera.hpp  lane_detection  main.cpp  mask_processor.cpp  mask_processor.hpp  trt_inference.cpp  trt_inference.hpp
Treino/: DataCollect.py  PreverEngine.py  RecordVideo.py  drive.py  driveRt.py  drive_tensorRt.py  export.py  help.txt  lowDriver.py  model_light.engine  model_light.onnx  prever.py  preveronnx.py  treinoLines.py
control_systems/: CMakeLists.txt  ZmqPublisher.cpp  ZmqPublisher.hpp  ZmqSubscriber.cpp  ZmqSubscriber.hpp  ZmqSubscriberTest.cpp  cam.cpp  cam.hpp  infer.cpp  infer.hpp  lane.cpp  main.cpp  mask.cpp  nmpc.cpp  nmpc.hpp  pid.hpp  utils.hpp  utils_control.cpp  utils_control.hpp
cpp3/: controller.cpp  controller.hpp  infer.cpp  infer.hpp  main.cpp  makefile  test
linenet/: README.md  inference.py  linenet.py  train.py  video.py
object_detection/: CMakeLists.txt  TensorRTYOLO.hpp  cam.hpp  fps.hpp  frame.hpp  inferObject.hpp  main.cpp  test_best1.py  test_engine_load.py  test_img_2_trt.py  test_img_trt.py  test_onnx.py  test_yolo_nano.py  test_yolo_nano_2.py  test_yolo_nano_4.py  trt_infer.py
object_detection/tests/: test_video_trt.py  test_yolo_nano.py  test_yolo_nano_3.py  test_yolo_nano_4.py  test_yolo_nano_4PC.py  test_yolo_nano_4_1.py
object_detection/yolov5_env/: pip.conf
optical_flow/: test1.py
pretrained/: _model.pth  model.onnx  model.pth
(+103 files in other folders)
